tests/verbatim_scanner/negative/false_starts.txxt
Expected: []
4. Verbatim:
Label only:
The treatest quote of all times:
This has colons: but is not verbatim